--- a/optimizacion/plantillas/index.html
+++ b/optimizacion/plantillas/index.html
@@ -17,6 +17,12 @@
         nav{
             height: 40px;
             background: #E27D60;
+            position: -webkit-sticky;
+            position: sticky;
+            top:0;
+            display:flex;
+            justify-content: center;
+            align-items: center;
         }
         nav p{
             width: 100ch;
@@ -24,7 +30,6 @@
             font-weight: bolder;
             font-size: larger;
             margin: auto;
-            padding-top:10px;
         }
         .container{
             margin-left: 10%;
@@ -74,10 +79,10 @@
         </h1>
         <p>
             Welcome, with this API you can optimize the space usage of your trucks trying to reduce the spent fuel. <br>
-            Distributing the packages among the trucks maximizing the volume usage.
-            Restrictions:
-            Each package should be accommodated in a single truck.
-            The total weight of the packages in a single truck must not overweight the truck capacity.
+            Distributing the packages among the trucks maximizing the volume usage.<br>
+            <span style="text-decoration: underline;">Restrictions:</span><br>
+            Each package should be accommodated in a single truck.<br>
+            The total weight of the packages in a single truck must not overweight the truck capacity.<br>
         </p>
         <h2>
             Example
@@ -92,10 +97,12 @@
                 {{jsonStyle2}}
             </pre>
             <p>
-                Information fields: <br>
+                <span style="text-decoration: underline;">Information fields: <br></span>
                 For each truck you have: Capacidad, nombre, identificador and patente. <br>
-                Each marker(destination of the packages) has: id, lat(latitude), lon(longitude) and a list of packages for each destination.
-                Each Package: id, description, weight and volume.
+                Each marker(destination of the packages) has: id, lat(latitude), lon(longitude) and a list of packages for each destination.<br>
+                Each Package: id, description, weight and volume.<br>
+                The RESPONSE will have a list for each truck with the markers(destination) of the packages and their information <br>
+                Plus the total amount of cash raised, total volume usage, and total weight among all trucks. <br>
             </p>
         </p>
         <h2>URL's</h2>
