--- a/optimizacion/plantillas/index.html
+++ b/optimizacion/plantillas/index.html
@@ -66,6 +66,9 @@
         footer{
             height: 70px;
             background: #E8A87C;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
@@ -113,6 +116,8 @@
     </div>
 </body>
 <footer>
-
+    <div>
+        Github Repo: <a href="https://github.com/facundoRecabarren/optimizacion">https://github.com/facundoRecabarren/optimizacion</a>
+    </div>
 </footer>
 </html>
