--- a/optimizacion/plantillas/index.html
+++ b/optimizacion/plantillas/index.html
@@ -111,7 +111,7 @@
         <h2>URL's</h2>
         <div class="url-post">
             <p id="post">POST :</p>
-            <p id="link">"https://optimization-api.herokuapp.com/buscar"</p>
+            <p id="link">"https://optimization-api.herokuapp.com/buscar/"</p>
         </div>
     </div>
 </body>
